<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:columnCount="3"
android:rowCount="5"
android:useDefaultMargins="true"
tools:context="com.example.rico.calculator2.MainActivity">

<TextView
    android:id="@+id/totalView"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_columnSpan="3"
    android:gravity="center"
    android:text="@string/number0" />

    <Button
        android:id="@+id/button1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number1" />

    <Button
        android:id="@+id/button2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number2" />

    <Button
        android:id="@+id/button3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number3" />

    <Button
        android:id="@+id/button4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number4" />

    <Button
        android:id="@+id/button5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number5" />

    <Button
        android:id="@+id/button6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number6" />

    <Button
        android:id="@+id/button7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number7" />

    <Button
        android:id="@+id/button8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number8" />

    <Button
        android:id="@+id/button9"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:onClick="ButtonPressed"
        android:text="@string/number9" />

    <Button
        android:id="@+id/clearButton"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/otherButton"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:elevation="5dp"
        android:text="@string/other" />

</GridLayout>